# tracker-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  claude.md  docker-compose.yml  prompts.md  pyproject.toml  requirements.txt  run_migrations.sh
.claude/: settings.local.json
Claude Conversations/: claude-conversation-2026-02-08-0cb4063d.md  claude-conversation-2026-02-08-1599a978.md  claude-conversation-2026-02-08-2f220f54.md  claude-conversation-2026-02-08-3932ed50.md  claude-conversation-2026-02-08-3934bd83.md  claude-conversation-2026-02-08-4ef51063.md  claude-conversation-2026-02-08-5e680a64.md  claude-conversation-2026-02-08-9d94d4a4.md  claude-conversation-2026-02-09-1717033e.md
app/: config.py  main.py
app/api/: dependencies.py
app/api/v1/routers/: __init__.py  cases.py
app/api/v1/schemas/: cases.py  queries.py
app/application/interfaces/: unit_of_work.py
app/application/use_cases/: create_case.py  get_case_by_id.py  get_cases.py
app/domain/: exceptions.py
app/domain/entities/: case.py
app/domain/repositories/: case_repository.py  query_repository.py
app/domain/value_objects/: case_priority.py  case_status.py  case_type.py
app/infrastructure/database/: connection.py  db.py  unit_of_work.py
app/infrastructure/database/repositories/: case_repository_impl.py  (+1 more)
migrations/: 001_initial_schema.sql
migrations/rollback/: 001_initial_schema.sql
nginx/: nginx.conf
scripts/: check-docker.sh  init-project.sh  troubleshoot.sh
tests/: conftest.py
tests/e2e/: test_case_api.py
(+8 files in other folders)
