[tool.poetry]
name = "tracker-backend"
version = "1.0.0"
description = "Sistema de tracker de casos de soporte y requerimientos"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
asyncpg = "^0.29.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
httpx = "^0.25"
ruff = "^0.1.0"
black = "^23.0"
mypy = "^1.0"
pre-commit = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
